Passed games and logged state to Home and Game pages, made app styles dependent on login state

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-#root {
+.main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -6,4 +6,8 @@
   background-color: #ececec;
   width: 100%;
   min-height: 100vh;
+}
+
+.main.logged {
+  background-color: pink;
 }
