--- a/client/src/Styles/Elements/Card.css
+++ b/client/src/Styles/Elements/Card.css
@@ -1,8 +1,15 @@
 .card {
-  width: 300px;
-  border: 1px solid black;
+  width: 100%;
+  height: inherit;
 }
 
 .imageContainer img {
-  max-width: 300px;
+  max-width: 100%;
 }
+
+.CartContainer {
+  max-width: 300px;
+  min-height: 400px;
+  margin-top: 30px !important;
+}
+
