--- a/client/src/Styles/Elements/Footer.css
+++ b/client/src/Styles/Elements/Footer.css
@@ -1,7 +1,19 @@
 footer {
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-top: 1px solid black;
+  justify-content: center;
+  border-bottom: 10px solid rgb(0, 0, 65);
   width: 100%;
+  height: 70px;
+  background:url(../../assets/footer.png);
+  z-index: 2;
+  margin-top: 30px;
 }
+
+.footer-center {
+  font-family: Minecraft;
+  color:rgb(30,144,255);
+  font-size: medium;
+  margin-top: 30px;
+}
+
