--- a/client/src/Styles/Elements/NavBar.css
+++ b/client/src/Styles/Elements/NavBar.css
@@ -9,16 +9,20 @@ nav {
   align-items: center;
   border-bottom: 10px solid rgb(0, 0, 65);
   width: 100%;
-  height: 70px;
+  height: 80px;
   background:url(../../assets/space.png);
+  z-index: 2;
+
 }
 
 .nav-center{
   font-family: Minecraft;
   color:rgb(30,144,255);
   font-size:xx-large ;
+  margin-top: 30px;
 }
 
 .nav-logo {
   max-height: 70px;
+  padding: 3px;
 }
