--- a/client/src/Styles/Pages/Home.css
+++ b/client/src/Styles/Pages/Home.css
@@ -3,4 +3,15 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  z-index: 1;
+}
+
+video{
+object-fit: cover;
+width: 100vw;
+height: 120vh;
+position: fixed;
+top :0;
+left: 0;
+z-index: -1;
 }
