--- a/client/src/Styles/Pages/SignUp.css
+++ b/client/src/Styles/Pages/SignUp.css
@@ -3,4 +3,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  z-index:2;
 }
+
+.fireBoyVideo {
+  object-fit: cover;
+  width: 100vw;
+  height: 95vh;
+  position: fixed;
+  top :0;
+  left: 0;
+  z-index: 1;
+  }
+
