some styling tweaks

--- a/client/src/Styles/Pages/SignUp.css
+++ b/client/src/Styles/Pages/SignUp.css
@@ -1,3 +1,10 @@
+.signP{
+  font-family: Minecraft;
+  font-size:large;
+  color: #f3f3f7;
+  z-index:3;
+}
+
 .signUp-form {
   display: flex;
   flex-direction: column;
