--- a/client/src/Styles/Elements/NavBar.css
+++ b/client/src/Styles/Elements/NavBar.css
@@ -14,6 +14,14 @@
   font-size:xx-large ;
 }
 
+.username {
+  color: rgb(225, 73, 245)
+}
+
+.nav-right{
+  display: flex;
+}
+
 .HomeNav {
 
   border-bottom: 10px solid rgb(0, 0, 65);
@@ -75,6 +83,16 @@
 
 .savedNav-center{
   color:rgb(40, 161, 197);
+  margin-top: 30px;
+}
+
+.courseNav {
+  border-bottom: 10px solid rgb(17, 42, 151);
+  background:url(../../assets/orange.png);
+}
+
+.courseNav-center{
+  color:rgb(14, 20, 104);
   margin-top: 30px;
 }
 
