--- a/client/src/Styles/Pages/Error404.css
+++ b/client/src/Styles/Pages/Error404.css
@@ -1,14 +1,9 @@
-
-.ryanVideo {
+.marioVideo {
     object-fit: cover;
     width: 100vw;
     height: 95vh;
     position: fixed;
     top :0;
     left: 0;
-    z-index: 0;
-}
-
-#saved {
-    z-index: 3;
-}
+    z-index: 1;
+    }
