--- a/client/src/Styles/Pages/CourseList.css
+++ b/client/src/Styles/Pages/CourseList.css
@@ -1,10 +1,13 @@
 .rocketVideo {
-    object-fit: cover;
-    width: 100vw;
-    height: 95vh;
-    position: fixed;
-    top :0;
-    left: 0;
-    z-index: 1;
-    }
-  
+  object-fit: cover;
+  width: 100vw;
+  height: 95vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+#courses {
+  z-index: 1;
+}
