--- a/client/src/Styles/Pages/Saved.css
+++ b/client/src/Styles/Pages/Saved.css
@@ -1,14 +1,17 @@
-
 .ryanVideo {
-    object-fit: cover;
-    width: 100vw;
-    height: 95vh;
-    position: fixed;
-    top :0;
-    left: 0;
-    z-index: 0;
+  object-fit: cover;
+  width: 100vw;
+  height: 95vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
 
 #saved {
-    z-index: 3;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 3;
 }
