--- a/client/src/Styles/Pages/Error404.css
+++ b/client/src/Styles/Pages/Error404.css
@@ -1,9 +1,10 @@
-.marioVideo {
+.errorVideo {
     object-fit: cover;
     width: 100vw;
     height: 95vh;
+    margin-top: 33px;
     position: fixed;
-    top :0;
+    top: 0;
     left: 0;
-    z-index: 1;
-    }
+    z-index:1;
+  }
