--- a/client/src/Styles/Pages/Profile.css
+++ b/client/src/Styles/Pages/Profile.css
@@ -4,7 +4,9 @@
   }
 
 h3{
-    color: rgb(243, 20, 232) !important;
+    color: rgb(7, 4, 7) !important;
+    background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
 }
 
 .profileVideo {
@@ -26,6 +28,6 @@ h3{
 
 .profile-username {
     z-index: 2;
-    color: rgb(250, 174, 244)
+    color: rgb(252, 120, 208)
 }
 
